# dailyclimb

./: README.md  person.json  person.schema.json  pyproject.toml  validate.js  validate.py
src/dailyclimb/: __init__.py  __main__.py  parse_args.py  validate.py
